Set Azure default region to westeurope for provisioning and workflow

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -9,7 +9,7 @@ on:
       location:
         description: 'Azure region'
         required: false
-        default: 'eastus'
+        default: 'westeurope'
       acr_name:
         description: 'ACR name (short)'
         required: true
